# coordwatch

./: .env.example  .gitignore  DATA_SOURCES.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
configs/: model_specs.yml  source_manifest.yml  variables.yml
data/manual/: README.md  episode_registry_seed.csv  refunding_manual_overrides.csv  source_verification_checklist.csv
data/reference/: duration_weights.csv  fred_series_catalog.csv  nyfed_primary_dealer_keys.csv
scripts/: 00_bootstrap.py  01_download_fred.py  02_download_treasury_refunding.py  03_download_treasury_financing.py  04_download_buybacks.py  05_download_primary_dealer.py  06_download_rates_and_repo.py  07_build_refunding_statement_index.py  08_extract_refunding_text.py  09_build_refunding_panel.py  10_build_weekly_master_panel.py  11_build_episode_registry.py  12_run_reaction_function.py  13_run_local_projections.py  14_build_figures.py  15_build_publish_artifacts.py  16_build_site_bundle_manifest.py  17_build_demo_seed.py  20_build_descriptive_tables.py  21_backfill_cash_balance.py  22_download_daily_cash_debt.py  23_build_research_snapshot.py  verify_repo.py
site/: index.html
site/css/: style.css
site/data/: appendix_lp_repo_continuous_liquidity.json  appendix_lp_repo_iorb.json  appendix_lp_repo_mechanism.json  appendix_lp_repo_no_debt_limit.json  appendix_lp_repo_refunding_event.json  appendix_lp_repo_refunding_placebo.json  auction_mix_appendix.json  episode_summary.json  (+20 more)
tests/: test_demo_pipeline.py  test_soma.py  test_treasury_cash_balance.py
(+52 files in other folders)
