[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordwatch"
version = "0.1.0"
description = "Measuring Fed-Treasury operational interdependence under ample reserves"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "jinja2>=3.1.4",
  "lxml>=5.2.2",
  "matplotlib>=3.8.4",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "pdfplumber>=0.11.4",
  "pyarrow>=15.0.2",
  "PyYAML>=6.0.1",
  "requests>=2.32.3",
  "scipy>=1.13.1",
  "statsmodels>=0.14.2",
  "tabulate>=0.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
